2005-11-02  Alexis Sukrieh <sukria@sukria.net>

	* Closes bug #3
	  + .md5 files now have two spaces between the hash and the file name so
	    the file is now usable with md5sum --check.

2005-10-24  Alexis Sukrieh <sukria@sukria.net>

	* backup-manager:
	  + added $svnadmin in the paths.
	* lib/actions.sh:
	  + The backup methdo switch now handles "svn" method.
	* lib/backup-methods.sh:
	  + backup_method_svn() implemeted using the pipe method mechanism.

2005-10-24  Alexis Sukrieh  <sukria@sukria.net>

	* backup-manager.conf.tpl:
	  + better comments for the pipe array.
	* lib/backup-methods.sh:
	  + "mysql" method now uses the pipe mechanism.

2005-10-23  Alexis Sukrieh  <sukria@sukria.net>

	* backup-manager.conf.tpl: 
	  + added examples about the backup method "pipe".
	* lib/actions.sh: 
	  + The backup switch now call backup_method_pipe() if needed.
	  + "tarball" method is not the default one anymore, must be called
	  explicitly.
	  + No default method anymore, trigger an error if unknown method
	  given.
	* lib/backup-methods.sh:
	  + new method: "pipe". Generic method which can make archives from
	  any commandline (the command should produce output on stdout).

2005-10-14  Alexis Sukrieh <sukria@sukria.net>

	* lib/backup-methods.sh: renamed a variable for gettext specific
	needs (s/error/nb_err).
	* lib/md5sum.sh: Fix a typo in a message.
	* po/.ext: removed, non needs to be archived.
	* po/fr.po: New version of the French translations.

2005-10-05  Alexis Sukrieh <sukria@backup-manager.org>

	* AUTHORS: fixed the name of "jimmy".
	* Makefile: man pages are generated and isntalled in the good section.
	* backup-manager.conf.tpl: Several typos.

0.5.9 Alexis Sukrieh <sukria@backup-manager.org>
	* Configuration keys have been drastically renamed.
	* Added a contrib script for upgrading the configuration files
	  to the new format: upgrade-conffile.sh
	* Upgraded the validation process, so deprecated variables trigger warnings